[tool.poetry]
name = "kmeans"
version = "0.1.0"
description = ""
authors = ["wbolton"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
seaborn = "^0.12.2"
matplotlib = "^3.6.2"
scikit-learn = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
